more consistently differentiate between uploaded and live-captured traffic idaholab/Malcolm#321 WIP

--- a/logstash/pipelines/enrichment/97_arkimize.conf
+++ b/logstash/pipelines/enrichment/97_arkimize.conf
@@ -39,7 +39,7 @@ filter {
       # note that if so, the arkime "user" field may conflict with ECS here
     }
 
-    # this identifies which node the log came from
+    # this identifies which node the log came from in Arkime
     if ([beat][name]) {
       mutate { id => "mutate_add_field_beat_name_node"
                add_field => { "[node]" => "%{[beat][name]}" } }
@@ -49,6 +49,15 @@ filter {
     } else {
       mutate { id => "mutate_add_field_logstash_node"
                add_field => { "[node]" => "malcolm" } }
+    }
+
+    # for Arkime's node name, add -upload for uploaded PCAP data to be consistent with Arkime sessions
+    if ("_filebeat_zeek_malcolm_upload" in [tags]) or
+       ("_filebeat_suricata_malcolm_upload" in [tags]) or
+       ("_filebeat_zeek_upload" in [tags]) or
+       ("_filebeat_suricata_upload" in [tags]) {
+      mutate { id => "mutate_replace_node_name_uploaded"
+               replace => {"[node]" => "%{[node]}-upload" } }
     }
 
 }
