--- a/logstash/pipelines/enrichment/98_finalize.conf
+++ b/logstash/pipelines/enrichment/98_finalize.conf
@@ -61,7 +61,17 @@ filter {
                              "_jsonparsefailure",
                              "_dissectfailure",
                              "_ouilookupfailure",
-                             "_geoip_lookup_failure" ] }
-
-
+                             "_geoip_lookup_failure",
+                             "_filebeat_suricata",
+                             "_filebeat_suricata_hedgehog_live",
+                             "_filebeat_suricata_live",
+                             "_filebeat_suricata_malcolm_live",
+                             "_filebeat_suricata_malcolm_upload",
+                             "_filebeat_suricata_upload",
+                             "_filebeat_zeek",
+                             "_filebeat_zeek_hedgehog_live",
+                             "_filebeat_zeek_live",
+                             "_filebeat_zeek_malcolm_live",
+                             "_filebeat_zeek_malcolm_upload",
+                             "_filebeat_zeek_upload" ] }
 }
