--- a/logstash/pipelines/zeek/01_input_zeek.conf
+++ b/logstash/pipelines/zeek/01_input_zeek.conf
@@ -9,25 +9,15 @@ filter {
   # this pipeline only needs to see zeek logs forwarded from filebeat
   if ("_filebeat_zeek" in [tags]) or
      ("_filebeat_zeek_live" in [tags]) or
+     ("_filebeat_zeek_upload" in [tags]) or
      ("_filebeat_zeek_hedgehog_live" in [tags]) or
-     ("_filebeat_zeek_malcolm_live" in [tags]) {
+     ("_filebeat_zeek_malcolm_live" in [tags]) or
+     ("_filebeat_zeek_malcolm_upload" in [tags]) {
 
-    if ("_filebeat_zeek_malcolm_live" in [tags]) {
-      # the shipper name comes from PCAP_NODE_NAME in filebeat.yml, but for consistency
-      #   with Arkime live capture append -live to the name for traffic captured live
-      if ([beat][name]) { mutate { id => "mutate_replace_beat_name_zeek_live"
-                                   replace => {"[beat][name]" => "%{[beat][name]}-live" } } }
-      if ([host][name]) { mutate { id => "mutate_replace_host_name_zeek_live"
-                                   replace => {"[host][name]" => "%{[host][name]}-live" } } }
-    }
-
-    mutate { id => "mutate_filebeat_zeek_forward_tag_remove"
-             remove_tag => [ "_filebeat_zeek",
-                             "_filebeat_zeek_live",
-                             "_filebeat_zeek_hedgehog_live",
-                             "_filebeat_zeek_malcolm_live" ] }
+    mutate { id => "mutate_filebeat_zeek_forward_noop" }
 
   } else {
     drop { id => "drop_not_filebeat_zeek" }
   }
 }
+
