--- a/logstash/pipelines/suricata/01_input_suricata.conf
+++ b/logstash/pipelines/suricata/01_input_suricata.conf
@@ -9,23 +9,12 @@ filter {
   # this pipeline only needs to see suricata logs forwarded from filebeat
   if ("_filebeat_suricata" in [tags]) or
      ("_filebeat_suricata_live" in [tags]) or
+     ("_filebeat_suricata_upload" in [tags]) or
      ("_filebeat_suricata_hedgehog_live" in [tags]) or
-     ("_filebeat_suricata_malcolm_live" in [tags]) {
+     ("_filebeat_suricata_malcolm_live" in [tags]) or
+     ("_filebeat_suricata_malcolm_upload" in [tags]) {
 
-    if ("_filebeat_suricata_malcolm_live" in [tags]) {
-      # the shipper name comes from PCAP_NODE_NAME in filebeat.yml, but for consistency
-      #   with Arkime live capture append -live to the name for traffic captured live
-      if ([beat][name]) { mutate { id => "mutate_replace_beat_name_suricata_live"
-                                   replace => {"[beat][name]" => "%{[beat][name]}-live" } } }
-      if ([host][name]) { mutate { id => "mutate_replace_host_name_suricata_live"
-                                   replace => {"[host][name]" => "%{[host][name]}-live" } } }
-    }
-
-    mutate { id => "mutate_filebeat_suricata_forward_tag_remove"
-             remove_tag => [ "_filebeat_suricata",
-                             "_filebeat_suricata_live",
-                             "_filebeat_suricata_hedgehog_live",
-                             "_filebeat_suricata_malcolm_live" ] }
+    mutate { id => "mutate_filebeat_suricata_forward_noop" }
 
   } else {
     drop { id => "drop_not_filebeat_suricata" }
