make malcolm landing page the default for the firefox launcher on the desktop (idaholab/Malcolm#252)

--- a/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-16/16343116651.desktop
+++ b/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-16/16343116651.desktop
@@ -3,7 +3,7 @@ Name=Firefox
 Comment=Web Browser
 GenericName=Web Browser
 X-GNOME-FullName=Firefox Web Browser
-Exec=/opt/firefox/firefox %u
+Exec=/opt/firefox/firefox https://localhost/
 Terminal=false
 X-MultipleArgs=false
 Type=Application
