--- a/.github/workflows/arkime-build-and-push-ghcr.yml
+++ b/.github/workflows/arkime-build-and-push-ghcr.yml
@@ -40,10 +40,25 @@ jobs:
         name: Checkout
         uses: actions/checkout@v4
       -
+        name: Generate build timestamp
+        shell: bash
+        run: echo "btimestamp=$(date -u +'%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_OUTPUT
+        id: generate_build_timestamp
+      -
         name: Extract branch name
         shell: bash
         run: echo "branch=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_OUTPUT
         id: extract_branch
+      -
+        name: Extract commit SHA
+        shell: bash
+        run: echo "sha=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+        id: extract_commit_sha
+      -
+        name: Extract Malcolm version
+        shell: bash
+        run: echo "mversion=$(grep -P "^\s+image:.*/malcolm/" docker-compose.yml | awk '{print $2}' | cut -d':' -f2 | uniq -c | sort -nr | awk '{print $2}' | head -n 1)" >> $GITHUB_OUTPUT
+        id: extract_malcolm_version
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -67,6 +82,9 @@ jobs:
           context: .
           file: ./Dockerfiles/arkime.Dockerfile
           build-args: |
+            MALCOLM_VERSION=${{ steps.extract_malcolm_version.outputs.mversion }}
+            BUILD_DATE=${{ steps.generate_build_timestamp.outputs.btimestamp }}
+            VCS_REVISION=${{ steps.extract_commit_sha.outputs.sha }}
             MAXMIND_GEOIP_DB_LICENSE_KEY=${{ secrets.MAXMIND_GEOIP_DB_LICENSE_KEY }}
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/malcolm/arkime:${{ steps.extract_branch.outputs.branch }}
