customizing index settings work in progress, idaholab/Malcolm#313 and idaholab/Malcolm#283

--- a/config/arkime.env.example
+++ b/config/arkime.env.example
@@ -1,7 +1,10 @@
 ARKIME_VIEWER_PORT=8005
-# Whether or not Arkime is allowed to delete uploaded/captured PCAP (see
-#   https://arkime.com/faq#pcap-deletion)
+# Whether or not Arkime is allowed to delete uploaded/captured PCAP
+#   https://arkime.com/faq#pcap-deletion
 MANAGE_PCAP_FILES=false
 ARKIME_FREESPACEG=10%
+# How often to create a new index in OpenSearch/Elasticsearch
+#   https://arkime.com/settings#rotateIndex
+ARKIME_ROTATE_INDEX=daily
 
 OPENSEARCH_MAX_SHARDS_PER_NODE=2500
