--- a/config/opensearch.env.example
+++ b/config/opensearch.env.example
@@ -44,8 +44,10 @@ OPENSEARCH_JAVA_OPTS=-server -Xms10g -Xmx10g -Xss256k -XX:-HeapDumpOnOutOfMemory
 # OpenSearch index patterns and timestamp fields
 MALCOLM_NETWORK_INDEX_PATTERN=arkime_sessions3-*
 MALCOLM_NETWORK_INDEX_TIME_FIELD=firstPacket
+MALCOLM_NETWORK_INDEX_SUFFIX=-%{+YYMMdd}
 MALCOLM_OTHER_INDEX_PATTERN=malcolm_beats_*
 MALCOLM_OTHER_INDEX_TIME_FIELD=@timestamp
+MALCOLM_OTHER_INDEX_SUFFIX=-%{+YYMMdd}
 ARKIME_NETWORK_INDEX_PATTERN=arkime_sessions3-*
 ARKIME_NETWORK_INDEX_TIME_FIELD=firstPacket
 
