--- a/logstash/pipelines/beats/98_finalize.conf
+++ b/logstash/pipelines/beats/98_finalize.conf
@@ -107,19 +107,35 @@ filter {
       }
     }
 
-    # this field is used to determine opensearch index prefix
-    if ([event][module]) {
-      mutate { id => "mutate_add_malcolm_beats_index_prefix_event_module"
-               add_field => { "[@metadata][malcolm_opensearch_index_prefix]" => "malcolm_beats_%{[event][module]}" } }
-    } else if ([agent][type]) {
-      mutate { id => "mutate_add_malcolm_beats_index_prefix_agent_type"
-               add_field => { "[@metadata][malcolm_opensearch_index_prefix]" => "malcolm_beats_%{[agent][type]}" } }
-    } else if ([input][type]) {
-      mutate { id => "mutate_add_malcolm_beats_index_prefix_input_type"
-               add_field => { "[@metadata][malcolm_opensearch_index_prefix]" => "malcolm_beats_%{[input][type]}" } }
-    } else {
-      mutate { id => "mutate_add_malcolm_beats_index_prefix_beats"
-               add_field => { "[@metadata][malcolm_opensearch_index_prefix]" => "malcolm_beats_" } }
+    # these fields are used to determine opensearch index format
+    if (![@metadata][malcolm_opensearch_index_prefix]) {
+      ruby {
+        id => "rube_add_beats_logs_index_prefix"
+        init => "$indexPrefix = ENV['MALCOLM_OTHER_INDEX_PATTERN'].sub(/[\*_-]*$/, '')"
+        code => "
+          ipref = ($indexPrefix.nil? || $indexPrefix.empty?) ? 'malcolm_beats' : $indexPrefix
+          icat = event.get('[event][module]')
+          if icat.nil? then
+            icat = event.get('[agent][type]')
+            if icat.nil? then
+              icat = event.get('[input][type]')
+              if icat.nil? then
+                icat = 'malcolm_beats_'
+              end
+            end
+          end
+          event.set('[@metadata][malcolm_opensearch_index_prefix]', ipref + '_' + icat)
+        "
+      }
+    }
+    if (![@metadata][malcolm_opensearch_index_suffix]) {
+      ruby {
+        id => "rube_add_beats_logs_index_suffix"
+        init => "$indexSuffix = ENV['MALCOLM_OTHER_INDEX_PATTERN']"
+        code => "
+          event.set('[@metadata][malcolm_opensearch_index_suffix]', ($indexSuffix.nil? || $indexSuffix.empty?) ? '-%{+YYMMdd}' : $indexSuffix)
+        "
+      }
     }
 
 
