--- a/logstash/pipelines/enrichment/98_finalize.conf
+++ b/logstash/pipelines/enrichment/98_finalize.conf
@@ -4,13 +4,22 @@
 
 filter {
 
-    # this field is used to determine opensearch index prefix
+    # these fields are used to determine opensearch index format
     if (![@metadata][malcolm_opensearch_index_prefix]) {
       ruby {
         id => "rube_add_network_logs_index_prefix"
         init => "$indexPrefix = ENV['MALCOLM_NETWORK_INDEX_PATTERN'].sub(/[\*_-]*$/, '')"
         code => "
           event.set('[@metadata][malcolm_opensearch_index_prefix]', ($indexPrefix.nil? || $indexPrefix.empty?) ? 'arkime_sessions3' : $indexPrefix)
+        "
+      }
+    }
+    if (![@metadata][malcolm_opensearch_index_suffix]) {
+      ruby {
+        id => "rube_add_network_logs_index_suffix"
+        init => "$indexSuffix = ENV['MALCOLM_NETWORK_INDEX_SUFFIX']"
+        code => "
+          event.set('[@metadata][malcolm_opensearch_index_suffix]', ($indexSuffix.nil? || $indexSuffix.empty?) ? '-%{+YYMMdd}' : $indexSuffix)
         "
       }
     }
