--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -23,6 +23,7 @@ export ARKIME_VIEWER_KEY=viewer.key
 # Password hash secret for Arkime viewer cluster (see https://arkime.com/settings)
 export ARKIME_PASSWORD_SECRET=Malcolm
 export ARKIME_FREESPACEG=7%
+export ARKIME_ROTATE_INDEX=daily
 
 export DOCUMENTATION_PORT=8420
 export MISCBEAT_PORT=9516
