customizing index settings work in progress, idaholab/Malcolm#313 and idaholab/Malcolm#283

--- a/logstash/pipelines/enrichment/98_finalize.conf
+++ b/logstash/pipelines/enrichment/98_finalize.conf
@@ -4,23 +4,18 @@
 
 filter {
 
-    # these fields are used to determine opensearch index format
-    if (![@metadata][malcolm_opensearch_index_prefix]) {
+    # resolve opensearch index
+    if (![@metadata][malcolm_opensearch_index]) {
       ruby {
-        id => "rube_add_network_logs_index_prefix"
-        init => "$indexPrefix = ENV['MALCOLM_NETWORK_INDEX_PATTERN'].sub(/[\*_-]*$/, '')"
-        code => "
-          event.set('[@metadata][malcolm_opensearch_index_prefix]', ($indexPrefix.nil? || $indexPrefix.empty?) ? 'arkime_sessions3' : $indexPrefix)
-        "
-      }
-    }
-    if (![@metadata][malcolm_opensearch_index_suffix]) {
-      ruby {
-        id => "rube_add_network_logs_index_suffix"
-        init => "$indexSuffix = ENV['MALCOLM_NETWORK_INDEX_SUFFIX']"
-        code => "
-          event.set('[@metadata][malcolm_opensearch_index_suffix]', ($indexSuffix.nil? || $indexSuffix.empty?) ? '-%{+YYMMdd}' : $indexSuffix)
-        "
+        id => "ruby_resolve_network_logs_index"
+        path => "/usr/share/logstash/malcolm-ruby/format_index_string.rb"
+        script_params => {
+          "target" => "[@metadata][malcolm_opensearch_index]"
+          "prefix_env" => "MALCOLM_NETWORK_INDEX_PATTERN"
+          "prefix_default" => "arkime_sessions3"
+          "suffix_env" => "MALCOLM_NETWORK_INDEX_SUFFIX"
+          "suffix_default" => "-%{%y%m%d}"
+        }
       }
     }
 
