--- a/config/opensearch.env.example
+++ b/config/opensearch.env.example
@@ -42,13 +42,21 @@ OPENSEARCH_SECONDARY_SSL_CERTIFICATE_VERIFICATION=false
 OPENSEARCH_JAVA_OPTS=-server -Xms10g -Xmx10g -Xss256k -XX:-HeapDumpOnOutOfMemoryError -Djava.security.egd=file:/dev/./urandom -Dlog4j.formatMsgNoLookups=true
 
 # OpenSearch index patterns and timestamp fields
+# Index pattern for network traffic logs written via Logstash (e.g., Zeek logs, Suricata alerts)
 MALCOLM_NETWORK_INDEX_PATTERN=arkime_sessions3-*
+# Default time field to use for network traffic logs in Logstash and Dashboards
 MALCOLM_NETWORK_INDEX_TIME_FIELD=firstPacket
-MALCOLM_NETWORK_INDEX_SUFFIX=-%{+YYMMdd}
+# Suffix used to create index to which network traffic logs are written (supports Ruby strftime strings in %{})
+MALCOLM_NETWORK_INDEX_SUFFIX=-%{%y%m%d}
+# Index pattern for other logs written via Logstash (e.g., nginx, beats, fluent-bit, etc.)
 MALCOLM_OTHER_INDEX_PATTERN=malcolm_beats_*
+# Default time field to use for other logs in Logstash and Dashboards
 MALCOLM_OTHER_INDEX_TIME_FIELD=@timestamp
-MALCOLM_OTHER_INDEX_SUFFIX=-%{+YYMMdd}
+# Suffix used to create index to which other logs are written (supports Ruby strftime strings in %{})
+MALCOLM_OTHER_INDEX_SUFFIX=-%{%y%m%d}
+# Index pattern used specifically by Arkime (will probably match MALCOLM_NETWORK_INDEX_PATTERN, should probably be arkime_sessions3-*)
 ARKIME_NETWORK_INDEX_PATTERN=arkime_sessions3-*
+# Default time field used by for sessions in Arkime viewer
 ARKIME_NETWORK_INDEX_TIME_FIELD=firstPacket
 
 # Miscellaneous
