--- a/logstash/pipelines/beats/98_finalize.conf
+++ b/logstash/pipelines/beats/98_finalize.conf
@@ -107,36 +107,20 @@ filter {
       }
     }
 
-    # these fields are used to determine opensearch index format
-    if (![@metadata][malcolm_opensearch_index_prefix]) {
+    # resolve opensearch index
+    if (![@metadata][malcolm_opensearch_index]) {
       ruby {
-        id => "rube_add_beats_logs_index_prefix"
-        init => "$indexPrefix = ENV['MALCOLM_OTHER_INDEX_PATTERN'].sub(/[\*_-]*$/, '')"
-        code => "
-          ipref = ($indexPrefix.nil? || $indexPrefix.empty?) ? 'malcolm_beats' : $indexPrefix
-          icat = event.get('[event][module]')
-          if icat.nil? then
-            icat = event.get('[agent][type]')
-            if icat.nil? then
-              icat = event.get('[input][type]')
-              if icat.nil? then
-                icat = 'malcolm_beats_'
-              end
-            end
-          end
-          event.set('[@metadata][malcolm_opensearch_index_prefix]', ipref + '_' + icat)
-        "
+        id => "ruby_resolve_beats_logs_index"
+        path => "/usr/share/logstash/malcolm-ruby/format_index_string.rb"
+        script_params => {
+          "target" => "[@metadata][malcolm_opensearch_index]"
+          "prefix_env" => "MALCOLM_OTHER_INDEX_PATTERN"
+          "prefix_default" => "malcolm_beats"
+          "suffix_env" => "MALCOLM_OTHER_INDEX_SUFFIX"
+          "suffix_default" => "-%{%y%m%d}"
+          "midfix" => [ "[event][module]", "[agent][type]", "[input][type]" ]
+        }
       }
     }
-    if (![@metadata][malcolm_opensearch_index_suffix]) {
-      ruby {
-        id => "rube_add_beats_logs_index_suffix"
-        init => "$indexSuffix = ENV['MALCOLM_OTHER_INDEX_PATTERN']"
-        code => "
-          event.set('[@metadata][malcolm_opensearch_index_suffix]', ($indexSuffix.nil? || $indexSuffix.empty?) ? '-%{+YYMMdd}' : $indexSuffix)
-        "
-      }
-    }
-
 
 }
