--- a/logstash/pipelines/external/99_opensearch_output.conf
+++ b/logstash/pipelines/external/99_opensearch_output.conf
@@ -6,7 +6,7 @@ output {
     user => "_MALCOLM_LOGSTASH_OPENSEARCH_SECONDARY_USER_"
     password => "_MALCOLM_LOGSTASH_OPENSEARCH_SECONDARY_PASSWORD_"
     manage_template => false
-    index => "%{[@metadata][malcolm_opensearch_index_prefix]}%{[@metadata][malcolm_opensearch_index_suffix]}"
+    index => "%{[@metadata][malcolm_opensearch_index]}"
     document_id => "%{+YYMMdd}-%{[event][hash]}"
   }
 }
