customizing index settings work in progress, idaholab/Malcolm#313 and idaholab/Malcolm#283

--- a/logstash/pipelines/beats/98_finalize.conf
+++ b/logstash/pipelines/beats/98_finalize.conf
@@ -107,7 +107,7 @@ filter {
       }
     }
 
-    # resolve opensearch index
+    # generate opensearch index name
     if (![@metadata][malcolm_opensearch_index]) {
       ruby {
         id => "ruby_resolve_beats_logs_index"
@@ -118,7 +118,7 @@ filter {
           "prefix_default" => "malcolm_beats"
           "suffix_env" => "MALCOLM_OTHER_INDEX_SUFFIX"
           "suffix_default" => "-%{%y%m%d}"
-          "midfix" => [ "[event][module]", "[agent][type]", "[input][type]" ]
+          "midfix_fields" => [ "[event][module]", "[agent][type]", "[input][type]" ]
         }
       }
     }
