--- a/logstash/pipelines/enrichment/98_finalize.conf
+++ b/logstash/pipelines/enrichment/98_finalize.conf
@@ -4,7 +4,7 @@
 
 filter {
 
-    # resolve opensearch index
+    # generate opensearch index name
     if (![@metadata][malcolm_opensearch_index]) {
       ruby {
         id => "ruby_resolve_network_logs_index"
