customizing index settings work in progress, idaholab/Malcolm#313 and idaholab/Malcolm#283

--- a/logstash/pipelines/beats/98_finalize.conf
+++ b/logstash/pipelines/beats/98_finalize.conf
@@ -115,9 +115,9 @@ filter {
         script_params => {
           "target" => "[@metadata][malcolm_opensearch_index]"
           "prefix_env" => "MALCOLM_OTHER_INDEX_PATTERN"
-          "prefix_default" => "malcolm_beats"
+          "prefix_default" => "malcolm_beats_*"
           "suffix_env" => "MALCOLM_OTHER_INDEX_SUFFIX"
-          "suffix_default" => "-%{%y%m%d}"
+          "suffix_default" => "%{%y%m%d}"
           "midfix_fields" => [ "[event][module]", "[agent][type]", "[input][type]" ]
         }
       }
