--- a/logstash/pipelines/enrichment/98_finalize.conf
+++ b/logstash/pipelines/enrichment/98_finalize.conf
@@ -12,9 +12,9 @@ filter {
         script_params => {
           "target" => "[@metadata][malcolm_opensearch_index]"
           "prefix_env" => "MALCOLM_NETWORK_INDEX_PATTERN"
-          "prefix_default" => "arkime_sessions3"
+          "prefix_default" => "arkime_sessions3-*"
           "suffix_env" => "MALCOLM_NETWORK_INDEX_SUFFIX"
-          "suffix_default" => "-%{%y%m%d}"
+          "suffix_default" => "%{%y%m%d}"
         }
       }
     }
