--- a/kubernetes/23-arkime-live.yml
+++ b/kubernetes/23-arkime-live.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: arkime-live-container
-        image: ghcr.io/mmguero-dev/malcolm/arkime:development
+        image: ghcr.io/idaholab/malcolm/arkime:24.01.0
         imagePullPolicy: Always
         stdin: false
         tty: true
@@ -62,7 +62,7 @@ spec:
             name: arkime-live-pcap-volume
       initContainers:
       - name: arkime-live-dirinit-container
-        image: ghcr.io/mmguero-dev/malcolm/dirinit:development
+        image: ghcr.io/idaholab/malcolm/dirinit:24.01.0
         imagePullPolicy: Always
         stdin: false
         tty: true
