use fakemachine from path

--- a/sensor-raspi/Makefile
+++ b/sensor-raspi/Makefile
@@ -14,7 +14,7 @@ yaml: $(addsuffix .yaml,$(platforms))
 
 ifeq ($(shell id -u),0)
 as_root =
-else ifneq (,$(wildcard /usr/bin/fakemachine))
+else ifneq (, $(shell which fakemachine))
 $(warning "This should normally be run as root, but found 'fakemachine', so using that.")
 as_root = fakemachine -v $(CURDIR) -- env --chdir $(CURDIR)
 else
