--- a/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-23/16343117599.desktop
+++ b/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-23/16343117599.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Version=1.0
 Name=Malcolm - CyberChef
-Exec=/opt/firefox/firefox https://localhost/cyberchef.html
+Exec=/usr/bin/firefox https://localhost/cyberchef.html
 Terminal=false
 X-MultipleArgs=false
 Type=Application
