--- a/malcolm-iso/config/includes.chroot/usr/share/applications/malcolm-arkime.desktop
+++ b/malcolm-iso/config/includes.chroot/usr/share/applications/malcolm-arkime.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Version=1.0
 Name=Malcolm - Arkime
-Exec=/opt/firefox/firefox https://localhost/
+Exec=/usr/bin/firefox https://localhost/
 Terminal=false
 X-MultipleArgs=false
 Type=Application
