--- a/config/arkime.env.example
+++ b/config/arkime.env.example
@@ -13,14 +13,16 @@ OPENSEARCH_MAX_SHARDS_PER_NODE=2500
 # These variables manage setting for Elasticseach's Index Lifecycle Management (ILM) features.
 # If Malcolm is using Opensearch, these variables are ignored
 # This indicates if Arkime should perform index management
-ELASTICSEARCH_ILM_ENABLED=false
+ELASTICSEARCH_ILM_ENABLED=False
 # Time in hours/days before (moving to warm) and force merge (number followed by h or d)
 ELASTICSEARCH_ILM_OPTIMIZATION_PERIOD=30d
 # Time in hours/days before deleting index (number followed by h or d)
 ELASTICSEARCH_ILM_RETENTION_TIME=90d
 # Number of replicas for older sessions indices
-ELASTICSEARCH_ILM_OLDER_SESSION_REPLICAS=1
+ELASTICSEARCH_ILM_OLDER_SESSION_REPLICAS=0
 #Number of weeks of history to keeps
 ELASTICSEARCH_ILM_HISTORY_RETENTION_WEEKS=13
 # Number of segments to optimize sessions to, default
 ELASTICSEARCH_ILM_SEGMENTS = 1
+# Should Arkime use a hot/warm design in which non-session data is stored in a warm index? (see https://https://arkime.com/faq#ilm)
+ELASTICSEARCH_ILM_HOT_WARM_ENABLED=False
