--- a/sensor-raspi/vagrant/Vagrantfile
+++ b/sensor-raspi/vagrant/Vagrantfile
@@ -48,6 +48,7 @@ Vagrant.configure("2") do |config|
       debootstrap \
       dosfstools \
       kpartx \
+      psmisc \
       python3 \
       qemu-user-static \
       qemu-utils \
