fix idaholab/Malcolm#335, pivot links from Arkime to Kibana in external elasticsearch are not working
Here's a list of what's been fixed/modified:

* `opensearch.env` and `dashboards.env` environment variables are now provided to `nginx-proxy` container so that the decisions for these links can be made based on them
* `envsubst` is used to expand variables into NGINX conf files in `/etc/nginx/conf.d` based on templates found in `/etc/nginx/templates`
* some custom logic in the `docker_entrpoint.sh` script for NGINX to do the environment variable substitution and some variable massaging prior to starting up NGINX
* two new environment variables in `dashboards.env.example` (blank by default but they could be manually overridden if there's more going on than we can automatically figure out based on the DASHBOARDS_URL variable:
```
NGINX_DASHBOARDS_PREFIX=
NGINX_DASHBOARDS_PROXY_PASS=
```
* not 100% related, but the landing page now shows "Kibana" with an elastic icon rather than "Dashboards" if we're in elasticsearch/kibana mode
* fixed issue with arkime to dashboards links not using correct index and time field names if those are not the defaults (see #313)
* removed some stuff left over from base image that wasn't ever really used

--- a/config/dashboards.env.example
+++ b/config/dashboards.env.example
@@ -4,3 +4,8 @@
 #   'http://dashboards:5601/dashboards', otherwise specify the Dashboards URL
 #   in the format 'protocol://host:port/uri'.
 DASHBOARDS_URL=http://dashboards:5601/dashboards
+# These values are used to handle the Arkime value actions to pivot from Arkime
+#   to Dashboards. The nginx-proxy container's entrypoint will try to formulate
+#   them automatically, but they may be specified explicitly here.
+NGINX_DASHBOARDS_PREFIX=
+NGINX_DASHBOARDS_PROXY_PASS=
