--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -780,6 +780,8 @@ services:
     env_file:
       - ./config/process.env
       - ./config/ssl.env
+      - ./config/opensearch.env
+      - ./config/dashboards.env
       - ./config/auth-common.env
       - ./config/nginx.env
     depends_on:
