--- a/nginx/nginx_readonly.conf
+++ b/nginx/nginx_readonly.conf
@@ -8,6 +8,7 @@ events { worker_connections 1024; }
 
 http {
 
+  include /etc/nginx/conf.d/*.conf;
   include /etc/nginx/mime.types;
   sendfile on;
 
@@ -73,7 +74,7 @@ http {
     include /etc/nginx/nginx_auth_rt.conf;
 
     # Arkime -> Dashboards shortcut
-    location ~* ^/idark2dash(.*) {
+    location ~* /idark2dash(.*) {
 
       set $filter_start_time now-1d;
       if ($arg_start != '') {
@@ -95,11 +96,7 @@ http {
         set $filter_value $arg_value;
       }
 
-      # TODO: index and time field could be specified by environment variables
-      rewrite ^/idark2dash/(.*) /dashboards/app/discover#/?_g=(refreshInterval:(pause:!t,value:0),time:(from:$filter_start_time,mode:absolute,to:$filter_stop_time))&_a=(columns:!(_source),filters:!((meta:(alias:!n,disabled:!f,index:'arkime_sessions3-*',key:$filter_field,negate:!f,params:(query:'$filter_value',type:phrase),type:phrase,value:'$filter_value'),query:(match:($filter_field:(query:'$filter_value',type:phrase))))),index:'arkime_sessions3-*',interval:auto,query:(language:lucene,query:''),sort:!(firstPacket,desc)) redirect;
-      proxy_pass http://dashboards;
-      proxy_redirect off;
-      proxy_set_header Host dashboards.malcolm.local;
+      include /etc/nginx/nginx_idark2dash_rewrite_rt.conf;
     }
 
     # Dashboards -> Arkime shortcut
