add option for customizing which log types get NetBox enrichment, idaholab/Malcolm#316
* added new environment variable to logstash.env:
```
LOGSTASH_NETBOX_ENRICHMENT_DATASETS=suricata.alert,zeek.conn,zeek.known_hosts,zeek.known_services,zeek.notice,zeek.signatures,zeek.software,zeek.weird
```

--- a/config/logstash.env.example
+++ b/config/logstash.env.example
@@ -11,6 +11,8 @@ LOGSTASH_SEVERITY_SCORING=true
 LOGSTASH_REVERSE_DNS=false
 # Whether or not Logstash will enrich network traffic metadata via NetBox API calls
 LOGSTASH_NETBOX_ENRICHMENT=false
+# Which types of logs will be enriched via NetBox (comma-separated list of provider.dataset, or the string all to enrich all logs)
+LOGSTASH_NETBOX_ENRICHMENT_DATASETS=suricata.alert,zeek.conn,zeek.known_hosts,zeek.known_services,zeek.notice,zeek.signatures,zeek.software,zeek.weird
 # Whether or not unobserved network entities in Logstash data will be used to populate NetBox
 LOGSTASH_NETBOX_AUTO_POPULATE=false
 # Caching parameters for NetBox's LogStash lookups
