--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,6 +13,9 @@ http {
   sendfile on;
 
   client_max_body_size 20m;
+  client_body_buffer_size 128k;
+  client_header_buffer_size 256k;
+  large_client_header_buffers 8 256k;
 
   fastcgi_buffers 16 64k;
   fastcgi_buffer_size 256k;
