work in progress for idaholab/Malcolm#329, improve extracted_files download page

--- a/file-monitor/supervisord.conf
+++ b/file-monitor/supervisord.conf
@@ -155,6 +155,7 @@ command=/usr/local/bin/extracted_files_http_server.py
   --zip %(ENV_EXTRACTED_FILE_HTTP_SERVER_ZIP)s
   --recursive %(ENV_EXTRACTED_FILE_HTTP_SERVER_RECURSIVE)s
   --directory /zeek/extract_files
+  --malcolm
 autostart=%(ENV_EXTRACTED_FILE_HTTP_SERVER_ENABLE)s
 autorestart=%(ENV_EXTRACTED_FILE_HTTP_SERVER_ENABLE)s
 startsecs=0
