work in progress for idaholab/Malcolm#329, improve extracted_files download page

--- a/config/zeek.env.example
+++ b/config/zeek.env.example
@@ -51,6 +51,8 @@ EXTRACTED_FILE_PIPELINE_VERBOSITY=
 EXTRACTED_FILE_HTTP_SERVER_ENABLE=false
 # Whether or not Zeek-extracted files served over HTTP will be archived in a Zip file
 EXTRACTED_FILE_HTTP_SERVER_ZIP=false
+# Whether or not to use libmagic to show MIME types for Zeek-extracted files served
+EXTRACTED_FILE_HTTP_SERVER_MAGIC=false
 # HTTP server will look in subdirectories for requested filename (e.g., in "/quarantined" and "/preserved")
 EXTRACTED_FILE_HTTP_SERVER_RECURSIVE=true
 # Environment variables for tweaking Zeek at runtime (see local.zeek)
