Added png to directory listing for chmod

--- a/file-monitor/supervisord.conf
+++ b/file-monitor/supervisord.conf
@@ -156,7 +156,8 @@ command=/usr/local/bin/extracted_files_http_server.py
   --recursive %(ENV_EXTRACTED_FILE_HTTP_SERVER_RECURSIVE)s
   --directory /zeek/extract_files
   --assets-directory "%(ENV_EXTRACTED_FILE_HTTP_SERVER_ASSETS_DIR)s"
-  --assets-directory-replacer /extracted-files/assets
+  --assets-directory-req-replacer /assets
+  --assets-directory-resp-replacer /extracted-files/assets
   --malcolm
 autostart=%(ENV_EXTRACTED_FILE_HTTP_SERVER_ENABLE)s
 autorestart=%(ENV_EXTRACTED_FILE_HTTP_SERVER_ENABLE)s
