work in progress for idaholab/Malcolm#329, improve extracted_files download page

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -438,6 +438,7 @@ services:
     env_file:
       - ./config/process.env
       - ./config/ssl.env
+      - ./config/dashboards.env
       - ./config/zeek.env
       - ./config/zeek-secret.env
     environment:
