--- a/kubernetes/12-file-monitor.yml
+++ b/kubernetes/12-file-monitor.yml
@@ -50,6 +50,8 @@ spec:
           - configMapRef:
               name: ssl-env
           - configMapRef:
+              name: dashboards-env
+          - configMapRef:
               name: zeek-env
           - secretRef:
               name: zeek-secret-env
