--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -391,6 +391,7 @@ services:
     env_file:
       - ./config/process.env
       - ./config/ssl.env
+      - ./config/dashboards.env
       - ./config/zeek.env
       - ./config/zeek-secret.env
     environment:
