fix bug idaholab/Malcolm#402, event.severity_tags is not being assigned correctly based on rule.category

--- a/logstash/maps/malcolm_severity.yaml
+++ b/logstash/maps/malcolm_severity.yaml
@@ -18,6 +18,7 @@
 "File transfer": 0
 "File transfer (high concern)": 75
 "File transfer (medium concern)": 50
+"MITRE ATT&CK for ICS framework technique": 80
 "MITRE ATT&CK framework technique": 80
 "Notice (other)": 60
 "Notice (protocol)": 60
