--- a/logstash/maps/notice_authors.yaml
+++ b/logstash/maps/notice_authors.yaml
@@ -1,4 +1,5 @@
 "ATTACK": "MITRE"
+"ATTACKICS": "MITRE"
 "Corelight": "Corelight"
 "CVE_2020_0601": "Johanna Amann"
 "CVE_2020_13777": "Johanna Amann"
