--- a/logstash/pipelines/zeek/19_severity.conf
+++ b/logstash/pipelines/zeek/19_severity.conf
@@ -36,23 +36,26 @@ filter {
     }
 
     # assign severity to notice based on category
-    if ([zeek][notice]) {
-      if ([zeek][notice][category] == "ATTACK") {
+    if ([event][dataset] == "notice") {
+      if ("ATTACK" in [rule][category]) {
         mutate { id => "mutate_add_field_severity_notice_mitre_attack"
                  add_field => { "[event][severity_tags]" => "MITRE ATT&CK framework technique" } }
-      } else if ([zeek][notice][category] == "Scan") {
+      } else if ("ATTACKICS" in [rule][category]) {
+        mutate { id => "mutate_add_field_severity_notice_mitre_attack_ics"
+                 add_field => { "[event][severity_tags]" => "MITRE ATT&CK for ICS framework technique" } }
+      } else if ("Scan" in [rule][category]) {
         mutate { id => "mutate_add_field_severity_notice_scan"
                  add_field => { "[event][severity_tags]" => "Notice (scan)" } }
-      } else if (([zeek][notice][category] == "FTP") or
-                 ([zeek][notice][category] == "HTTP") or
-                 ([zeek][notice][category] == "HTTPATTACKS") or
-                 ([zeek][notice][category] == "SSL")) {
+      } else if (("FTP" in [rule][category]) or
+                 ("HTTP" in [rule][category]) or
+                 ("HTTPATTACKS" in [rule][category]) or
+                 ("SSL" in [rule][category])) {
         mutate { id => "mutate_add_field_severity_notice_protocol"
                  add_field => { "[event][severity_tags]" => "Notice (protocol)" } }
-      } else if (([zeek][notice][category] =~ /^CVE/) or
-                 ([zeek][notice][category] == "EternalSafety") or
-                 ([zeek][notice][category] == "Ripple20") or
-                 ([zeek][notice][category] == "Zerologon")) {
+      } else if (([vulnerability][enumeration] == "CVE") or
+                 ("EternalSafety" in [rule][category]) or
+                 ("Ripple20" in [rule][category]) or
+                 ("Zerologon" in [rule][category])) {
         mutate { id => "mutate_add_field_severity_notice_vuln"
                  add_field => { "[event][severity_tags]" => "Notice (vulnerability)" } }
       } else {
